--- a/src/components/chat-room.css
+++ b/src/components/chat-room.css
@@ -17,12 +17,27 @@
 .chat__body {
     height: 100%;
     background: #dedede;
-    padding: 20px 40px;
+    padding: 10px 5px;
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
     gap: 15px;
+    width: 100%;
 
+}
+.chat__body::-webkit-scrollbar {
+    width: 12px;
+}
+
+.chat__body::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px #fff; 
+    border-radius: 10px;
+}
+
+.chat__body::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background: rgb(0, 149, 255);
+    border: 1px solid #fff;
 }
 .chat__input {
     display: flex;
@@ -41,6 +56,72 @@
     font-weight: 600;
     cursor: pointer;    
 }
+
+.chat__input button:disabled {
+    background: #dfdfdf;
+    border: 2px solid#fefefe;
+}
+.connection-msg {
+    background: #2a2a2a;
+    color: #fff;
+    font-weight: 500;
+    padding: 5px 10px;
+    max-width: fit-content;
+    border-radius: 10px;
+    align-self: center;
+}
+
+.connection-msg span {
+    color: rgb(0, 149, 255);
+    font-weight: 600;
+}
+
+.join-form {
+    text-align: center;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap:20px;
+    padding-top: 200px;
+}
+.join-form input {
+    padding: 5px 10px;
+    border-radius: 8px;
+    border: none;
+    outline: none;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
+}
+
+.join-form button {
+    padding: 10px 15px;
+    border-radius: 8px;
+    font-size: 16px;
+    font-weight: 700;
+    background: rgb(0, 149, 255);
+    border: none;
+    color: #fff;
+    cursor: pointer;
+    transition: all .3s ease-in;
+}
+
+.join-form button:hover {
+    background: #fff;
+    color: rgb(0, 149, 255);
+
+}
+
+.join-form button:disabled {
+    background: #fefefe;
+    color: #dedede;
+    cursor: not-allowed;
+}
+.join-error {
+    color: red;
+    font-weight: 500;
+}
+
 
  
   
