--- a/src/components/message.css
+++ b/src/components/message.css
@@ -1,22 +1,50 @@
 .message {
     display: flex;
-    align-items: center;
+    align-items: start;
+    gap: 15px;
+
+}
+.message-own {
+    display: flex;
+    flex-direction: row-reverse;
+    align-items: start;
     gap: 15px;
 
 }
 .message-photo {
     border-radius: 50%;
-    padding: 15px;
+    height: 50px;
+    width: 50px;
     background: #000;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .message-content {
     background: #fff;
-    border-radius: 15px;
-    border-top-left-radius: none;
-    padding: 5px 25px;
+    border-radius: 8px;
+    border-top-left-radius: 0;
+    padding: 3px 10px;
+    font-size: 12px;
+    max-width: 300px;
+    word-wrap: break-word;
+}
+.message-content-own {
+    background: rgb(0, 149, 255);
+    color: #fff;
+    border-radius: 8px;
+    border-top-right-radius: 0;
+    padding: 3px 10px;
+    font-size: 12px;
+    max-width: 300px;
+    word-wrap: break-word;
+}
+.content-username {
+    font-weight: 500;
 }
 .content-details {
+    margin-top: 8px;
     display: flex;
     justify-content: space-between;
 }
